Adding test verifying that the new implicit imports are not used for ordinary classes.